<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">1小区微生活</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">设置</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Filter ListView</string>
    <string name="xiaoquidlabel">""</string>
    <string name="xiaoqunamelabel">""</string>
    <string name="xiaoquaddresslabel">""</string>
    <string name="myxiaoqu_label">我的小区</string>
    <string name="xiaoquaround_label">小区周边</string>
    <string name="wuyenotifier_label">小区公告</string>
    <string name="phonenumbers_label">号码通</string>
    <string name="parking_label">小区车位</string>    
    <string name="shoppings_label">商铺</string>
    <string name="waimai_label">外卖</string>
    <string name="pingche_label">拼车</string>
    
    <string name="search_hint_label">搜索</string>
    
    <string name="xiaoqu_search_hint_label">搜索小区名</string>
    <string name="xiaoqu_search_header_label">请选择小区</string>
    <string name="personal_header_label">个人中心</string>
    <string name="wuye_notifier_header_label">小区公告</string>
    <string name="notifier_header_label">公告</string>    
    <string name="return_btn_label">返回</string>
    <string name="aaa">拼车</string>
    <string name="bbb">拼车</string>
    <string name="ccc">拼车</string>
    
    <string name="document_item_subtitle_label">""</string>
    <string name="document_item_title_label">""</string>
    <string name="document_item_id_label">""</string>
    
    <string name="document_detail_subtitle_label">""</string>
    <string name="document_detail_title_label">""</string>
    <string name="document_detail_id_label">""</string>
    
    <string name="city_selector_btn_label">返回</string>
    <string name="city_search_header_label">请选择城市</string>
    <string name="city_search_hint_label">搜索城市名</string>
    
    <string name="visitor_nickname">游客</string>
    <string name="evaluation_content">路过</string>
    
    <string name="newest_comments">最新评论</string>
    <string name="add_comment_menu">增加评论</string>
    <string name="add_comment">增加评论</string>
    <string name="comment_content_hint_label">请增加评论(限50字)</string>
    <string name="btn_commit_comment">提交</string>
    
    
    
    <string name="login_label">登陆</string>
    <string name="login_btn_label">登陆</string>
    <string name="register_label">注册</string>
    <string name="username_label">用户名</string>
    <string name="password_label">密码</string>
    <string name="forgot_pwd_label">忘记密码</string>
    <string name="username_hint_label">手机号</string>
    <string name="password_hint_label">密码</string>
    
    <string name="register_title_label">注册用户</string>    
    <string name="phonenum_label">手机号</string>
    <string name="phonenum_hint_label">输入手机号</string>    
    <string name="password_reg_label">密码</string>
    <string name="password_reg_hint_label">不少于6位</string>
    <string name="reg_commit_btn_label">确定</string>
    <string name="userprotocol_check_label">我已同意用户协议</string>
    
    <string name="parking_stall_info_list_title_label">车位出租</string>    
    <string name="filter_info_pop">筛选条件</string>
    <string name="publish_info_pop">发布信息</string>
    <string name="my_info_pop">我的信息</string>
    
    <string name="publish_info_header_title">发布信息</string>
    <string name="publish_info_save_btn">保存</string>
    <string name="publish_title">标题</string>
    <string name="publish_title_content_hint_label">请输入 标题</string>    
    <string name="publish_address">详细地址</string>
    <string name="publish_address_content_hint_label">请输入详细地址</string>
    <string name="publish_desc">描述</string>
    <string name="publish_desc_content_hint_label">请输入描述</string>
    <string name="publish_supply_type">供需</string>
    <string name="publish_default_supply_type">出租</string>    
    <string name="publish_identity">发布人身份</string>
    <string name="publish_default_identity">个人</string>
    <string name="publish_area">面积</string>
    <string name="publish_area_content_hint_label">请输入面积</string>
    <string name="publish_price">租金</string>
    <string name="publish_price_content_hint_label">请输入租金</string>
    <string name="publish_unit">租金单位</string>
    <string name="publish_default_unit">元/月</string>
    <string name="publish_phone">联系电话</string>
    <string name="publish_phone_content_hint_label">请输入联系电话</string>
    <string name="publish_nickname">联系人名称</string>
    <string name="publish_nickname_content_hint_label">请输入联系人名称</string>
    
    <string name="parking_view_header_title">车位信息</string>
    <string name="parking_edit_btn">编辑</string>
    <string name="parking_default_empty_value">空</string>
    <string name="publish_create_date">创建时间</string>
    
    <string name="parking_my_list_title_label">我的信息</string>
    
    
    
    
    
    <string name="search_label">筛选条件</string>
    <string name="search_btn_label">搜索</string>
    
    <string name="search_page_title_label">条件选择</string>
    <string name="search_page_btn_label">确定</string>
    
    <string name="submit_btn_label">提交</string>  
    
    
    
    

</resources>
