<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eee"
    android:orientation="vertical" >
    
    <RelativeLayout 
        	android:id="@+id/header_layout"
  			android:layout_width="fill_parent"
  			android:layout_height="45dp"
  			android:background="@drawable/main_bar_icon"
  			android:gravity="center_vertical"  > 
  			
  			<Button
	            android:id="@+id/btn_back"
	            android:layout_width="70dp"
	            android:layout_height="wrap_content"
	            android:layout_centerVertical="true"
	            android:text="@string/return_btn_label"
	            android:textSize="17sp"
	            android:textColor="#fff"
	            android:onClick="page_back"
	            android:background="@drawable/title_btn_back" />    
      		
      		<TextView
        		android:layout_width="wrap_content" 
        		android:layout_height="wrap_content" 
        		android:text="@string/add_comment"
        		android:layout_centerInParent="true"
        		android:textSize="20sp"		
				android:textColor="#ffffff" /> 
      		
			<Button
	            android:id="@+id/btn_commit_comment"
	            android:layout_width="70dp"
	            android:layout_height="wrap_content"
	            android:layout_alignParentRight="true" 
	            android:layout_centerVertical="true"
	            android:text="@string/btn_commit_comment"
	            android:textSize="17sp"
	            android:textColor="#fff"	            
	            android:onClick="onCommitComment"  
	            android:background="@drawable/title_btn_right" />      
							
		</RelativeLayout>
		
    	<RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"            
            android:focusable="true"  
        	android:focusableInTouchMode="true"
            android:layout_below="@+id/header_layout">

		    <EditText
		        android:id="@+id/comment_content"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="10dp"
		        android:gravity="top"
		        android:minLines="3"
		        android:hint="@string/comment_content_hint_label" >
		
		        <!-- <requestFocus /> -->
		    </EditText>
    
    </RelativeLayout>

</RelativeLayout>