<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/xiaoquidlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xiaoquidlabel"/>

    <TextView
        android:id="@+id/xiaoquid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/xiaoquidlabel" />

    <TextView
        android:id="@+id/namelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/xiaoquidlabel"
        android:text="@string/xiaoqunamelabel" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/xiaoquid"
        android:layout_toRightOf="@+id/namelabel"
        android:textColor="#000" />

    <TextView
        android:id="@+id/xiaoquaddresslabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/namelabel"
        android:text="@string/xiaoquaddresslabel" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_toRightOf="@+id/xiaoquaddresslabel"
        android:textColor="#555" />

</RelativeLayout>