<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent"
      android:background="#eee"
      android:orientation="vertical" >
      
      <RelativeLayout 
  			android:id="@+id/title" 
  			android:layout_width="fill_parent"
  			android:layout_height="45dp"
  			android:background="@drawable/main_bar_icon"
  			android:orientation="vertical"
  			android:gravity="center_horizontal"  >  
      		
      		<Button
	            android:id="@+id/btn_back"
	            android:layout_width="70dp"
	            android:layout_height="wrap_content"
	            android:layout_centerVertical="true"
	            android:text="@string/return_btn_label"
	            android:textSize="17sp"
	            android:textColor="#fff"
	            android:onClick="page_back"
	            android:background="@drawable/title_btn_back" />    
      		
      		<TextView
        		android:layout_width="wrap_content" 
        		android:layout_height="wrap_content" 
        		android:text="@string/search_label"
        		android:layout_centerInParent="true"
        		android:textSize="20sp"		
				android:textColor="#ffffff" />
      		
			<TextView
      		    android:id="@+id/search_button"
			    android:layout_width="90dp" 
        		android:layout_height="wrap_content"
        		android:layout_marginRight="5dp"
        		android:text="@string/search_btn_label"
        		android:layout_alignParentRight="true" 
        		android:layout_centerVertical="true"
        		android:gravity="center|center"
	            android:textSize="17sp"
	            android:textColor="#fff"
        		android:src="@drawable/title_btn_function"
				android:background="@drawable/title_btn_right"/> 
				
	   </RelativeLayout>
	   
       <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"            
            android:focusable="true"  
        	android:focusableInTouchMode="true">
		
		    <ListView
		        android:id="@+id/listview"
		        android:layout_width="fill_parent"
		        android:layout_height="fill_parent"
		        android:background="@drawable/mm_listitem"
		        android:layout_marginTop="0dp"
		        android:divider="#cccccc"
    			android:dividerHeight="1dp"/>
    
    </RelativeLayout>
      
</LinearLayout>      